# MicrosoftToDo-Telegram-AIBot

./: .gitignore  Dockerfile  LICENSE  README.md  SERVER_SETUP.md  ai_service.py  auth_manager.py  config.py  env_example.txt  get_tokens.py  main.py  microsoft_todo_client.py  pyproject.toml  pyrightconfig.json  pytest.ini  refresh_tokens.py  requirements.txt  telegram_bot.py
.github/workflows/: deploy.yml
ai/: __init__.py  decompose.py  function_tools.py  image.py  intent.py  prompts.py  response.py  time_validator.py
bridge/: __init__.py
bridge/mstodo_bridge/: daemon.py  formatting.py  http_api.py  models.py  snapshot.py
bridge/mstodo_bridge/mqtt/: publish.py
core/: README.md  mstodo.py  oauth.py  token_store.py
docs/esp32/: README.md
esp32_server/: __init__.py  auth.py  routes.py  utils.py
handlers/: __init__.py  admin.py  commands.py  menu.py  message.py  token.py  utils.py
scripts/: install-bridge.sh  install-mstodo.sh  run.py
service/: mstodo-bridge.service  telegram-bot.service
skills/mstodo/: README.md  SKILL.md
tests/: test_cli_and_search.py  test_complex_todo.py  test_datetime_helper.py  test_esp32_snapshot_contract.py  test_mstodo_normalize.py  test_query_resolver.py
todo/: __init__.py  api.py  compat.py  token_manager.py
utils/: __init__.py  datetime_helper.py
